task2 and task3

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="This page shows data on movies">
 		<meta name="keywords" content="movies, html, css, data">
 		<meta name="author" content="Luka Jurkic">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="style/style.css">
 	</head>
 	<body>
 		<header>
@@ -19,7 +19,7 @@
 				<h2 id="primarna-navigacija">Navigacija</h2>
 				<div aria-label="dropdown-navigation" class="dropdown-content">
 					<a href="./index.html">Pocetna</a>
-					<a href="./slike.html">Galerija slika</a>
+					<a href="slike">Galerija slika</a>
 					<a href="./graph.html">Graf</a>
 				</div>
 			</div>
@@ -64,8 +64,8 @@
     <aside>
 		<h2>Top Movie by IMDB</h2>
         <picture>
-			<source srcset="image1.webp" media="(min-width: 769px)">
-			<img src="image2.jpg" alt="Movie Poster" style="max-width: 100%;">
+			<source srcset="./images/image1.webp" media="(min-width: 769px)">
+			<img src="./images/image2.jpg" alt="Movie Poster" style="max-width: 100%;">
 		</picture>
     </aside>
 </div>
